// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card-container Basic renders as expected 1`] = `
<div
  className="dr-ui--card-container"
>
  <a
    className="unprose mb18 block color-blue-on-hover"
    href="#category"
  >
    <h2
      className="txt-bold unprose"
      id="category"
    >
      Category
       
      <span
        data-swiftype-index="false"
      >
        (
        2
        )
      </span>
    </h2>
  </a>
  <div
    className="grid grid--gut36"
  >
    <div
      className="mb18 col w-full w-1/2-ml"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('../files/simple-map.png')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example one
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
    <div
      className="mb18 col w-full w-1/2-ml"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('../files/simple-map.png')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example two
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`card-container Full width renders as expected 1`] = `
<div
  className="dr-ui--card-container"
>
  <a
    className="unprose mb18 block color-blue-on-hover"
    href="#another-category"
  >
    <h2
      className="txt-bold unprose"
      id="another-category"
    >
      Another category
       
      <span
        data-swiftype-index="false"
      >
        (
        2
        )
      </span>
    </h2>
  </a>
  <div
    className=""
  >
    <div
      className="mb18 border-b border--darken10"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example one
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
    <div
      className="mb18 border-b border--darken10"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example two
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`card-container Use cardColSize renders as expected 1`] = `
<div
  className="dr-ui--card-container"
>
  <a
    className="unprose mb18 block color-blue-on-hover"
    href="#another-category"
  >
    <h2
      className="txt-bold unprose"
      id="another-category"
    >
      Another category
       
      <span
        data-swiftype-index="false"
      >
        (
        4
        )
      </span>
    </h2>
  </a>
  <div
    className="grid grid--gut36"
  >
    <div
      className="mb18 col w-full w-1/4-ml"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('../files/simple-map.png')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example one
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
    <div
      className="mb18 col w-full w-1/4-ml"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('../files/simple-map.png')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example two
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
    <div
      className="mb18 col w-full w-1/4-ml"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('../files/simple-map.png')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example one
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
    <div
      className="mb18 col w-full w-1/4-ml"
    >
      <a
        className="dr-ui--card text-color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('../files/simple-map.png')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div
          className="transition"
        >
          <div
            className="mb6 flex txt-bold flex--center-cross"
          >
            <div>
              Example two
               
            </div>
            <div
              className="w60"
            >
              <svg
                className="transition"
                fill="none"
                height="11"
                style={
                  Object {
                    "marginLeft": "10px",
                    "opacity": "0",
                  }
                }
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.292 0L10.314 5.022V5.49L5.292 10.494L3.87 9.072L6.732 6.21L5.508 6.264H0V4.212H5.508L6.696 4.266L3.87 1.44L5.292 0Z"
                  fill="#3478F3"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "color": "#757d82",
              }
            }
          >
            description
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
